Prepare for Hash Cryptography
We prepare now for a secure way to copy and check strings.

Signed-off-by: Tristan Marsell <tristan.marsell@t-online.de>

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -81,5 +81,7 @@
     <string name="ssr">Surround Sound Recording (SSR)</string>
     <string name="clearaudio">ClearAudio</string>
     <string name="htc_audio_effects">HTC Audio Effects</string>
+    <string name="secure_replace_successful">Secure Replace: Successful</string>
+    <string name="secure_replace_failed">Secure Replace: Failed</string>
 
 </resources>
