Ready for SecureReplace
SecureReplace ensures via MD5 hashsum generation a 100% working copy

Signed-off-by: Tristan Marsell <tristan.marsell@t-online.de>

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -83,5 +83,8 @@
     <string name="htc_audio_effects">HTC Audio Effects</string>
     <string name="secure_replace_successful">Secure Replace: Successful</string>
     <string name="secure_replace_failed">Secure Replace: Failed</string>
+    <string name="security">Security</string>
+    <string name="settings">Settings</string>
+    <string name="yandere_settings">Yandere Settings</string>
 
 </resources>
