--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -86,5 +86,19 @@
     <string name="security">Security</string>
     <string name="settings">Settings</string>
     <string name="yandere_settings">Yandere Settings</string>
+    <string name="heavybass_enabled">Heavybass Enabled</string>
+    <string name="heavybass_enabled_description">I have enabled Heavybass for you</string>
+    <string name="heavybass_disabled">Heavybass Disabled</string>
+    <string name="heavybass_disabled_description">I have disabled Heavybass for you</string>
+    <string name="pdesireaudio_disabled">PDesireAudio disabled</string>
+    <string name="pdesireaudio_enabled">PDesireAudio enabled</string>
+    <string name="pdesireaudio_enabled_description">PDesireAudio is enabled, let\'s rock your phone</string>
+    <string name="pdesireaudio_disabled_description">PDesireAudio is disabled, maybe too much for you…</string>
+    <string name="pdesire_clearaudio_enabled">PDesire\'s ClearAudio enabled</string>
+    <string name="pdesire_clearaudio_enabled_description">PDesire\'s ClearAudio is enabled. He has put much effort on this, I hope you enjoy</string>
+    <string name="pdesire_ssr_enabled_description">PDesire\'s Surround Sound Recording is enabled. Whoa, it feels so real</string>
+    <string name="pdesire_ssr_enabled">PDesire\'s Surround Sound Recording Enabled</string>
+    <string name="welcome_back">Welcome Back</string>
+    <string name="welcome_back_description">Welcome Back to Project Meli</string>
 
 </resources>
