Time for Project Meli Thirtyone release

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -117,6 +117,14 @@
     <string name="secure_replace_description">Ensure your files does get replaced successfully in cost of performance</string>
     <string name="analytics">Analytics</string>
     <string name="about_firebase_analytics">About Google Firebase Analytics</string>
-    <string name="about_firebase_analytics_description">Google Firebase Analytics is a service by Google to provide analytics to this app. \nLogged will be: Gender, Device, Android Version, Which country you are living and What you are doing on YandereAudio app. \nThese data will be saved on Google Servers and I just have access to these data. \nI grant that any data of you will keep private and is just for improving Project Meli. \nI will not spy on you nor these data will be used for payment. \nIf you still do not believe me, look on the Source Code and you see there will not be any dangerous data transmitted to me or something like that-</string>
+    <string name="about_firebase_analytics_description">Google Firebase Analytics is a service by Google to provide analytics to this app. \nLogged will be: Gender, Device, Android Version, Which country you are living and What you are doing on YandereAudio app. \nThese data will be saved on Google Servers and I just have access to these data. \nI grant that any data of you will keep private and is just for improving Project Meli. \nI will not spy on you nor these data will be used for payment. \nIf you still do not believe me, look on the Source Code and you see there will not be any dangerous data transmitted to me or something like that</string>
+    <string name="reboot">Reboot System</string>
+    <string name="reboot_description">It\'s required to Reboot the System if you changed something on the settings</string>
+    <string name="pdaec_core_description">Not available yet</string><!--The PDAEC addition to the Hardware Abstraction Layer, possibly does not work on any device-->
+    <string name="pdaec_core">PDAEC Core</string>
+    <string name="pdaec_audio_effects_description"> Replaces the Android Main Audio Effects (bundle, reverb) with the PDAEC Audio Effect libraries</string>
+    <string name="pdaec_audio_effects">PDAEC Audio Effects</string>
+    <string name="heavybass">Heavybass</string>
+    <string name="pdaec">PDesire Audio Effect Core (PDAEC)</string>
 
 </resources>
