mobile: strings: Update for a better English and avoid misunderstandings

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -5,14 +5,14 @@
     <string name="yandere_audio_service_control">YandereAudio Service Control</string>
     <string name="navigation_drawer_open"> </string>
     <string name="navigation_drawer_close"> </string>
-    <string name="security_error">App shutdowning because security conditions not given</string>
+    <string name="security_error">App shutting down because security conditions not given</string>
     <string name="service_name">YandereAudio Service</string>
     <string name="title_activity_pdesire_audio">PDesireAudio Service</string>
     <string name="title_activity_universal">Universal Management</string>
     <string name="title_activity_sony">Sony Management</string>
-    <string name="heavybass_description">A SRS Re-callibration to output more bass from the Headphones</string>
+    <string name="heavybass_description">A SRS re-callibration to output more bass from the headphones</string>
     <string name="heavybass_title">Heavybass Mode</string>
-    <string name="pdesireaudio_uhqa_description">Set your Soundcard to the PDesireAudio Ultra High Quality Mode</string>
+    <string name="pdesireaudio_uhqa_description">Set your sound card to the PDesireAudio Ultra High Quality Mode</string>
     <string name="pdesireaudio_uhqa_title">Ultra High Quality Mode</string>
     <string name="pdesireaudio_static_description">Gives you full control to PDesireAudio</string>
     <string name="pdesireaudio_static_title">Static Mode</string>
@@ -27,14 +27,14 @@
     <string name="team_author_description">Team DevElite</string>
     <string name="team_author_title">Development Team</string>
     <string name="sound_enhance_strings_v4a_title_txt">VIPER4Android®</string>
-    <string name="sound_enhance_strings_v4a_desc_txt">Customize your Audio Output however you want</string>
+    <string name="sound_enhance_strings_v4a_desc_txt">Customize your audio output however you want</string>
     <string name="credits_title">Credits:</string>
     <string name="credits">All Credits goes to PDesire and Team DevElite</string>
     <string name="credits_pdesireaudio">All Credits goes to PDesire</string>
     <string name="pdesireaudio_found">PDesireAudio found on Kernel</string>
     <string name="pdesireaudio_not_found">PDesireAudio not found on Kernel</string>
-    <string name="pdesireaudio_desc">What is PDesireAudio</string>
-    <string name="pdesireaudio_description">PDesireAudio is a kernel modification for high end audio \n \nAsk your kernel developer if he can implement PDesireAudio to his kernel if it doesn\'t have it yet</string>
+    <string name="pdesireaudio_desc">What is PDesireAudio?</string>
+    <string name="pdesireaudio_description">PDesireAudio is a kernel modification for high end audio \n \nAsk your kernel developer to implement PDesireAudio to your kernel if it doesn\'t have it yet</string>
     <string name="meli_not_installed">Project Meli not found</string>
     <string name="no_project_meli_installed">You do not have Project Meli installed, or installed not properly, download the latest version from Project Meli Thread</string>
     <string name="go_to_thread">Go To Thread</string>
@@ -52,9 +52,10 @@
     <string name="new_theme">New Theme</string>
     <string name="theme">Theme</string>
     <string name="yume_audio">YumeAudio Engine</string>
-    <string name="yume_audio_description">The old but best Engine of Project Yume.\nApply if you feel nostalgic and want to hear something old but wonderful.\nAttention: Your device will reboot</string>
+    <string name="yume_audio_description">The old but best engine of Project Yume.\nApply it if you feel nostalgic and want to hear something old but wonderful.\nAttention: Your device will reboot</string>
     <string name="meli_audio">MeliAudio Y Engine</string>
-    <string name="meli_audio_description">New, better, more powerful.\nThe MeliAudio Y Engine is for people, who wants audio without any compromises. \nIt does get updated everytime by every Project Meli version, and is already activated by default.\nAttention: Your device will reboot</string>
+    <string name="meli_audio_description">New, better, more powerful.\nThe MeliAudio Y Engine is for people, who wants audio without 
+any compromises. \nIt does get updated every time by every Project Meli version, and is already activated by default.\nAttention: Your device will reboot</string>
     <string name="sony_management">Sony Management</string>
     <string name="universal_management">Universal Management</string>
     <string name="device_management">Device Management</string>
@@ -122,8 +123,8 @@
     <string name="about_firebase_analytics_description">Google Firebase Analytics is a service by Google to provide analytics to this app. \nLogged will be: Gender, Device, Android Version, Which country you are living and What you are doing on YandereAudio app. \nThese data will be saved on Google Servers and I just have access to these data. \nI grant that any data of you will keep private and is just for improving Project Meli. \nI will not spy on you nor these data will be used for payment. \nIf you still do not believe me, look on the Source Code and you see there will not be any dangerous data transmitted to me or something like that</string>
     <string name="about_fabric_analytics">About Fabric.io Realtime Analytics/Crashlytics</string>
     <string name="about_fabric_analytics_description">Fabric.io Analytics/Crashlytics is a service by Fabric.io, a Google company, to provide analytics to this app. \nLogged will be: which country you are living, if your app does crash and what you are doing on YandereAudio app. \nThese data will be saved on Fabric.io Servers and I just have access to these data. \nI grant that any data of you will keep private and is just for improving Project Meli. \nI will not spy on you nor these data will be used for payment. \nIf you still do not believe me, look on the Source Code and you see there will not be any dangerous data transmitted to me or something like that</string>
-    <string name="reboot">Reboot System</string>
-    <string name="reboot_description">It\'s required to Reboot the System if you changed something on the settings</string>
+    <string name="reboot">Reboot system</string>
+    <string name="reboot_description">It\'s required to reboot the system if you changed something on the settings</string>
     <string name="pdaec_core_description">Not available yet</string><!--The PDAEC addition to the Hardware Abstraction Layer, possibly does not work on any device-->
     <string name="pdaec_core">PDAEC Core</string>
     <string name="pdaec_audio_effects_description"> Replaces the Android Main Audio Effects (bundle, reverb) with the PDAEC Audio Effect libraries</string>
